--- a/backoffice.html
+++ b/backoffice.html
@@ -10,6 +10,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
+    <style>
+        .alert[role="alert"] {
+            position: fixed;
+            bottom: 3vh;
+            left: 3vw;
+            right: 3vw;
+        }
+
+        form label {
+            margin-top: 0.75em;
+            margin-bottom: 0.25em;
+        }
+    </style>
     <title>Hello, world!</title>
 </head>
 
@@ -42,20 +56,64 @@
                 <h1 class="text-center">Backoffice</h1>
 
                 <form class="d-flex flex-column" onsubmit="handleSubmit(event)">
-                    <input class="form-control" type="text" placeholder="Name">
-                    <input class="form-control" type="text" placeholder="Description">
-                    <input class="form-control" type="number" placeholder="Price">
+                    <label>Name</label>
+                    <input minlength="4" class="form-control" type="text" placeholder="Name">
+                    <label>Description</label>
+                    <input maxlength="10" class="form-control" type="text" placeholder="Description">
+                    <label>Price</label>
+                    <input min="10" class="form-control" type="number" placeholder="Price">
+                    <label>Date</label>
                     <input class="form-control" type="datetime-local">
 
-                    <button type="submit" class="btn btn-primary btn-block mt-3 mx-auto">Add event</button>
+                    <button type="submit" class="btn btn-primary btn-block mt-3">Add event</button>
+                    <button type="button" onclick="handleDelete()" class="d-none btn btn-danger btn-block mt-3">Delete
+                        event</button>
                 </form>
 
             </div>
         </div>
     </div>
 
+    <div class="d-none alert alert-danger" role="alert">
+        A simple danger alert—check it out!
+    </div>
+
     <script>
+        const eventId = (new URLSearchParams(window.location.search)).get("id")
+
         const [name, description, price, time] = document.querySelectorAll("form input")
+        const formButton = document.querySelector("form button")
+        const deleteButton = document.querySelector("form button.btn-danger")
+
+        const alertElement = document.querySelector("div.alert")
+
+        window.onload = async () => {
+            if (eventId) {
+                try {
+                    const response = await fetch("https://striveschool-api.herokuapp.com/api/agenda/" + eventId)
+
+                    if (response.status === 404) throw new Error("This event does not exist. Maybe it was deleted")
+                    if (!response.ok) throw new Error("Something went wrong")
+
+                    const data = await response.json()
+
+                    console.log(data)
+                    name.value = data.name
+                    description.value = data.description
+                    price.value = data.price
+                    time.value = data.time.slice(0, -8)
+
+                    formButton.innerText = "Update"
+
+                    deleteButton.classList.remove("d-none")
+
+                } catch (error) {
+                    // console.log("This error is handled: ", error.message)
+                    alert(error.message)
+                    window.location.assign("/backoffice.html")
+                }
+            }
+        }
 
         async function handleSubmit(e) {
             // We do not want the form to submit the input data to the server unmanaged
@@ -70,13 +128,34 @@
                 time: time.value
             }
 
+            for (const key of Object.keys(bodyObject)) {
+                if (!bodyObject[key]) {
+                    showAlert("Please fill in the field: " + key)
+                    return
+                }
+            }
+            if (!bodyObject.name.includes("@")) {
+                showAlert("The name must include an @ symbol")
+                return
+            }
+
             const body = JSON.stringify(bodyObject)
 
-            const response = await fetch("https://striveschool-api.herokuapp.com/api/agenda",
+            const endpoint =
+                eventId
+                    ? "https://striveschool-api.herokuapp.com/api/agenda/" + eventId
+                    : "https://striveschool-api.herokuapp.com/api/agenda"
+
+            const method =
+                eventId
+                    ? "PUT" // "PATCH"
+                    : "POST"
+
+            const response = await fetch(endpoint,
                 {
                     // By default the method is "GET".
                     // To Create a new resource, we use the "POST" method.
-                    method: "POST",
+                    method: method,
                     headers: {
                         // Authorization header identifying your user
                         // "Authorization": "Bearer A_VERY_LONG_STRING_1234567890",
@@ -93,11 +172,39 @@
             if (response.ok) {
                 const data = await response.json()
                 console.log(data)
-                alert("Success! The event was successfully created.")
+                alert("Success! The event was successfully " + (eventId ? "updated!" : "created!"))
             } else {
                 alert("Something went wrong. Please try again later")
             }
 
+        }
+
+
+        async function handleDelete() {
+            console.log("Deleting event with id: " + eventId)
+
+            if (confirm("Are you sure you want to delete this event?")) {
+
+                const response = await fetch("http://striveschool-api.herokuapp.com/api/agenda/" + eventId,
+                    { method: "DELETE" })
+
+                if (response.ok) {
+                    alert("Success! The event was successfully deleted!")
+                    window.location.href = "/index.html"
+                } else {
+                    alert("Something went wrong. Please try again later")
+                }
+
+            }
+        }
+
+        function showAlert(message) {
+            alertElement.innerText = message
+            alertElement.classList.remove("d-none")
+
+            setTimeout(() => {
+                alertElement.classList.add("d-none")
+            }, 3000)
         }
     </script>
 
